--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 KEDEBAH_API_URL=https://kedebah.com/api
 TICKETING_TOOL_API_URL=https://ticketing-tool.com/api
-API_KEY=your_api_key_here
+API_KEY=****************
 DB_USERNAME=***************
 DB_PASSWORD=***************
-DB_HOST=95.217.63.56
-DB_PORT=1632
-DB_NAME=business_kedebah
+DB_HOST=***********
+DB_PORT=******
+DB_NAME=******8
